; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_dmtimer.c_omap_dm_timer_set_match.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_dmtimer.c_omap_dm_timer_set_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_dm_timer = type { i32 }

@OMAP_TIMER_CTRL_REG = common dso_local global i32 0, align 4
@OMAP_TIMER_CTRL_CE = common dso_local global i32 0, align 4
@OMAP_TIMER_MATCH_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @omap_dm_timer_set_match(%struct.omap_dm_timer* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.omap_dm_timer*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.omap_dm_timer* %0, %struct.omap_dm_timer** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %4, align 8
  %9 = load i32, i32* @OMAP_TIMER_CTRL_REG, align 4
  %10 = call i32 @omap_dm_timer_read_reg(%struct.omap_dm_timer* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i32, i32* @OMAP_TIMER_CTRL_CE, align 4
  %15 = load i32, i32* %7, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %7, align 4
  br label %22

17:                                               ; preds = %3
  %18 = load i32, i32* @OMAP_TIMER_CTRL_CE, align 4
  %19 = xor i32 %18, -1
  %20 = load i32, i32* %7, align 4
  %21 = and i32 %20, %19
  store i32 %21, i32* %7, align 4
  br label %22

22:                                               ; preds = %17, %13
  %23 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %4, align 8
  %24 = load i32, i32* @OMAP_TIMER_CTRL_REG, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @omap_dm_timer_write_reg(%struct.omap_dm_timer* %23, i32 %24, i32 %25)
  %27 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %4, align 8
  %28 = load i32, i32* @OMAP_TIMER_MATCH_REG, align 4
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @omap_dm_timer_write_reg(%struct.omap_dm_timer* %27, i32 %28, i32 %29)
  ret void
}

declare dso_local i32 @omap_dm_timer_read_reg(%struct.omap_dm_timer*, i32) #1

declare dso_local i32 @omap_dm_timer_write_reg(%struct.omap_dm_timer*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
